src/tests/testfiles/function-declarations/2.txt
Error at 5:1: Redefinition of function 'f'
int f(int a, int b) {
^
